json output for bompare

--- a/.github/workflows/scan_image.yml
+++ b/.github/workflows/scan_image.yml
@@ -9,8 +9,8 @@ jobs:
         id: scan2
         with:
           image: rust:1.46.0 
-          format: human
-          output: rust.human
+          format: json
+          output: rust.json
       - uses: actions/upload-artifact@v2
         with:
           name: tern 
