--- a/.github/workflows/scan_image.yml
+++ b/.github/workflows/scan_image.yml
@@ -25,4 +25,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: tern
-          path: ${{ steps.scan2.outputs.file }} :  
+          path: ${{ steps.scan2.outputs.file }}
