--- a/.github/workflows/scan_image.yml
+++ b/.github/workflows/scan_image.yml
@@ -5,7 +5,7 @@ jobs:
   scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: philips-labs/tern-action@v1.0.0
+      - uses: philips-labs/tern-action@add-scancode
         id: scan
         with:
           image: rust:1.46.0 
@@ -16,12 +16,12 @@ jobs:
           name: tern 
           path: ${{ steps.scan.outputs.file }} 
       - uses: philips-labs/tern-action@add-scancode
-        id: scan-scancode
+        id: scan2
         with:
           image: rust:1.46.0 
           format: json
           output: rust.json
-          scancode: true
+          scancode: 'true'
       - uses: actions/upload-artifact@v2
         with:
           name: tern
